Fix spacing issue

--- a/__tests__/__fixtures__/rule-spacing.scss
+++ b/__tests__/__fixtures__/rule-spacing.scss
@@ -16,7 +16,9 @@
 
   // Comment
   .slds-rule-valid__b {
-    width: 100%;
+    @media (min-width: 30em) {
+      width: 0;
+    }
   }
 }
 
